Fixed alignment

--- a/style.css
+++ b/style.css
@@ -141,16 +141,14 @@ button{
 #htmlvid{
     right: 500px;
 }
-#amazon{
+.amazon{
     border: 5px dotted red;
     background-color: burlywood;
-    background-size: cover;
+ 
     height: 500px;
     width: 500px;
     padding: 0%;
 
-    background-position: center;
-    background-repeat: no-repeat;
    
 
 }
@@ -160,9 +158,25 @@ button{
     width: auto;
 }
 .background-image {
-    object-fit: cover;
+    
+    object-fit: contain;
     object-position: center;
     width: 100%;
     height: 100%;
+    justify-content: start;
+
+  }
+  .vid{
+    display: flex;
+    flex-direction: column;
+
+    
+    
+  }
+  .fbox{
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: 1fr 1fr 0.5fr;
+  
 
   }
